after conflict commits

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,2 +1,8 @@
+#Token Credentials
 username=admin
 password=password123
+
+# OAuth Credentials
+client_id=abc123
+client_secret=xyz789
+client_credentials=client_credentials
