--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,35 @@
 			<artifactId>poiji</artifactId>
 			<version>${poijiVersion}</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>json-schema-validator</artifactId>
+			<version>5.3.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Log4j2 API -->
+		<!--<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.23.1</version>
+		</dependency>-->
+
+		<!-- Log4j2 Core -->
+		<!--<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.23.1</version>
+		</dependency>-->
+
+		<!-- Log4j2 SLF4J Bridge (optional but useful if using SLF4J in
+		framework) -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.20.0</version>
+			<scope>test</scope>
+		</dependency>
 
 
 	</dependencies>
